[tool.poetry]
name = "dhcp"
version = "0.1.0"
description = ""
authors = ["alexis-opolka <alexis.opolka@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "main:test"